# drip-python

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  wiki_helper.txt
.circleci/: config.yml
drip/: client.py  typeshed.py  utils.py
drip/api/: __init__.py  accounts.py  batches.py  broadcasts.py  campaigns.py  conversions.py  custom_fields.py  events.py  forms.py  shoppers.py  subscribers.py  tags.py  users.py  webhooks.py  workflows.py
tests/: conftest.py  test_client.py  test_utils.py
tests/api/: test_accounts.py  test_batches.py  test_broadcasts.py  test_campaigns.py  test_conversions.py  test_custom_fields.py  test_events.py  test_forms.py  test_shoppers.py  test_subscribers.py  test_tags.py  test_users.py  test_webhooks.py  test_workflows.py
tests/live_api/: test_accounts.py  test_batches.py  test_broadcasts.py  test_campaigns.py  test_conversions.py  test_custom_fields.py  test_events.py  test_forms.py  test_sanity.py  test_shoppers.py  test_subscribers.py  test_tags.py  test_users.py  test_webhooks.py
