[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "drip-python"
version = "0.3.0"
description = "Python wrapper for Drip's REST API"
authors = ["Ross Hodapp <ross.hodapp@drip.com>"]
license = "MIT"
packages = [
    {include = "drip"}
]
readme = "README.md"
homepage = "https://developer.drip.com/"
repository = "https://github.com/DripEmail/drip-python"
keywords = [
  "drip",
  "api",
  "ecrm",
  "ecommerce",
  "automation"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7",
  "Topic :: Communications :: Email",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Utilities",
  "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
requests-toolbelt = "^0.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pylint = "^2.4"

[tool.black]
line-length = 120